Thu May 14 11:17:54 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/,perl/docs/examples/,
	  perl/generate-perl-exceptions,perl/t/databasemodified.t,
	  perl/t/search.t,perl/t/writabledatabase.t,perl/util.i.in: Whitespace
	  clean-up.

Thu May 14 10:57:31 GMT 2015  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Remove superfluous ';' after closing
	  '}' of namespace.

Thu May 14 10:52:53 GMT 2015  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Use croak_sv() or ERRSV if defined.

Thu May 14 10:32:12 GMT 2015  Olly Betts <olly@survex.com>

	* lua/generate-lua-exceptions,perl/generate-perl-exceptions,
	  python/generate-python-exceptions: Have a single copyright statement
	  at the top of the script (in a $copyright variable), and substitute
	  this into the generated script.

Thu May 14 10:28:26 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 14 03:54:05 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Wrap missing constants OP_SYNONYM and STEM_ALL_Z.

Thu May 14 03:50:37 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Remove duplicate %constant for OP_VALUE_RANGE.

Wed May 06 11:19:42 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed May 06 07:45:18 GMT 2015  Olly Betts <olly@survex.com>

	* python/pythontest2.py,python/pythontest3.py: Fix typo in test context
	  ("multipler" -> "multiplier").

Wed May 06 07:42:56 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Simplify test of Ruby version.

Wed May 06 07:40:59 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Add workaround for Perl defining a seed() macro
	  which breaks '#include <algorithm>' undef C++11 with GCC.

Tue May 05 14:15:37 GMT 2015  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Ship generate-rdoc-stubs in the tarball.  Reported
	  by Matthias Klose in https://bugs.debian.org/782270

Wed Mar 04 00:28:34 GMT 2015  Olly Betts <olly@survex.com>
